<resources>
    <string name="app_name">LakNews</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="refresh">refresh</string>
    <string name="preference">preferences</string>
    <string name="blocked">blocked words</string>
    <string name="profile">edit profile</string>
    <string name="logout">logout</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search</string>
    <string name="change_password_title">Change Password</string>
    <string name="authorize_to_change_email">To change email you need to enter your password again</string>
    <string name="authorize_to_change_password">To change you password need to enter your old password again</string>
    <string name="change_email_title">Change Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="breaking_news_title">Breaking News</string>
    <string name="recent_news_title">Recent News</string>
    <string name="saved_news_title">Saved News</string>
    <string name="search_news_title">Search News</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>
    <string name="new_email">New Email</string>
    <string name="password">Password</string>
    <string name="authenticate">Authenticate</string>
    <string name="new_password">New Password</string>
    <string name="transition_image_text">IMG</string>
    <string name="author">Author</string>
    <string name="example_date">03 Jan 2020</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="source">Source</string>
    <string name="time">Time</string>

</resources>