<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".setting.UpdateEmailFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layoutHead"
            android:background="#5CC09F"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_view"
                android:background="@drawable/profile"
                android:layout_centerInParent="true"
                android:layout_width="@dimen/profile_image_size"
                android:layout_height="@dimen/profile_image_size"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/change_email_title"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/setting_elements_title_margin_top"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/image_view"
                android:enabled="true"
                android:id="@+id/edit_text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </RelativeLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:animateLayoutChanges="true"
            android:id="@+id/layoutPassword"
            android:padding="@dimen/settings_lower_Side_padding"
            android:visibility="invisible"
            android:layout_below="@id/layoutHead"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/settings_text_view_margins"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:text="@string/authorize_to_change_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <androidx.appcompat.widget.AppCompatEditText
                android:maxLength="10"
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="password"
                android:inputType="textPassword"
                android:singleLine="true"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="@dimen/settings_text_view_margins"
                android:layout_gravity="center_horizontal"
                android:textAllCaps="false"
                android:text="Authenticate"
                android:id="@+id/button_authenticate"
                android:layout_width="@dimen/profile_buttons_width"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:visibility="visible"
            android:id="@+id/layoutUpdateEmail"
            android:padding="@dimen/settings_lower_Side_padding"
            android:layout_below="@id/layoutHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">


            <androidx.appcompat.widget.AppCompatEditText
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textAlignment="center"
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="@dimen/settings_text_view_margins"
                android:layout_gravity="center_horizontal"
                android:textAllCaps="false"
                android:text="@string/update"
                android:id="@+id/button_update"
                android:layout_width="@dimen/profile_buttons_width"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <progressbar
            android:visibility="invisible"
            android:id="@+id/progressbar"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>


</FrameLayout>